@@ -2,7 +2,8 @@ Pending changes in the mainline
 ===============================
 
 * Refactoring of HttpOutput ("Content-Length" header is now always sent)
-* Fixes for Visual Studio 2013 and Visual Studio 64bit
+* Fixes for Visual Studio 2013 and Windows 64bit
+* Experimental "KeepAlive" configuration option to enable HTTP Keep-Alive
 
 
 Version 0.8.2 (2014/08/07)
